# photorec-sorter

./: README.md  jpgSorter.py  numberOfFilesPerFolderLimiter.py  pyproject.toml  recovery.py
src/photorec_sorter/: cli.py  files_per_folder_limiter.py  jpgSorter.py  jpg_sorter.py  recovery.py
