[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photorec-sorter"
version = "0.1.0"
authors = [
    { name="RecRanger", email="RecRanger+package@proton.me" },
]
description = "A tool to efficiently check if a Bitcoin Address has ever been used before"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "loguru",
    "exifread",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/RecRanger/photo-rec"
Issues = "https://github.com/RecRanger/photo-rec/issues"

[project.scripts]
photorec_sorter = "photorec_sorter.cli:main_cli"
